TW-52 Fixed spacing and img

--- a/src/components/Recommendations/Recommendation/styles.module.scss
+++ b/src/components/Recommendations/Recommendation/styles.module.scss
@@ -38,7 +38,6 @@ $background: rgb(255, 255, 255);
 ._stars {
   width: 100%;
   height: 100%;
-  max-width: 200px;
   margin-bottom: 10px;
 }
 
@@ -54,5 +53,25 @@ $background: rgb(255, 255, 255);
   }
   ._recommendation-item {
     min-height: 244px;
+  }
+}
+
+._stars {
+  display: block;
+  font-size: 60px;
+  line-height: 40px;
+
+  &::before {
+    content: "★★★★★";
+    letter-spacing: 3px;
+    background: linear-gradient(90deg, rgb(216, 47, 101) 100%, white 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+}
+
+@media screen and (max-width: 850px) {
+  ._stars {
+    font-size: 40px;
   }
 }
