--- a/src/components/Recommendations/Recommendations.module.scss
+++ b/src/components/Recommendations/Recommendations.module.scss
@@ -5,7 +5,7 @@
 
 @media only screen and (max-width: 549px) {
   ._recommendations h1 {
-    max-width: 467px;
+    max-width: 386px;
   }
 }
 
